<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edResult"
        android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value1"
        />
    
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edValue1"
        android:inputType="number|numberDecimal"
        />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value2"/>
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edValue2"
        android:inputType="number|numberDecimal"
        />
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
	        <Button
		        android:gravity="center"
		        android:padding="10dp"
		        android:id="@+id/btSum"
		        android:text="@string/sum"
		        />
	        <Button
		        android:gravity="center"
		        android:padding="10dp"
		        android:id="@+id/btSub"
		        android:text="@string/sub"
		        />
	        <Button
        		android:gravity="center"
		        android:padding="10dp"
        		android:id="@+id/btMult"
        		android:text="@string/mult"
         		/>
		    <Button
        		android:gravity="center"
		        android:padding="10dp"
		        android:id="@+id/btDiv"
		        android:text="@string/div"
		        />
		</TableRow>
    </TableLayout>
    
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btClear"
        android:text="@string/clear"
         />

</LinearLayout>
